fixed margins to eliminate horizontal scrolling <~530px

--- a/homepage/static/homepage/css/styles.css
+++ b/homepage/static/homepage/css/styles.css
@@ -151,7 +151,6 @@
 
 .section.projects-slide .project-description {
     width: 40%;
-    margin: 0 1em;
     text-align: center;
 }
 
